moved all parameters to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,25 @@
 [influxserver]
+; IP address of your InfluxDB server
 host = 192.168.178.54
+; Port of the InfluxDB server
 port = 8086
+; Username for the InfluxDB database
 user = root
+; Password for the InfluxDB database
 password = root
+; Database name in InfluxDB
 dbname = logger
 
 [sensor]
+; session identifier allows better filtering later
+session = dev
+; locations identifies where you sensor is placed
+location = livingroom
+; enable_gas activates the air quality sensor
 enable_gas = True
+; temp_offset defines the temperature offset of the sensor
+temp_offset = -3.5
+; intervall defines the reading intervall of the sensor in seconds
+interval = 5
+; burn_in_tim defines the time in seconds the sensor will heat up until sending data
+burn_in_time = 500
